--- a/src/templates/home/home.html
+++ b/src/templates/home/home.html
@@ -183,26 +183,12 @@
                             <div class="account-role">{{ current_user.role.capitalize() }}</div>
                         </div>
                         <div class="menu-divider"></div>
-                        <a href="#" class="menu-item">
+                        <a href="{{ url_for('auth.edit_profile') }}" class="menu-item">
                             <svg class="menu-icon" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
                                 <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"/>
                                 <circle cx="12" cy="7" r="4"/>
                             </svg>
                             Edit Profile
-                        </a>
-                        <a href="#" class="menu-item">
-                            <svg class="menu-icon" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-                                <path d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"/>
-                                <circle cx="12" cy="12" r="3"/>
-                            </svg>
-                            Account Settings
-                        </a>
-                        <a href="#" class="menu-item">
-                            <svg class="menu-icon" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-                                <circle cx="12" cy="12" r="10"/>
-                                <path d="M12 16v-4M12 8h.01"/>
-                            </svg>
-                            Help & Support
                         </a>
                         <div class="menu-divider"></div>
                         <a href="{{ url_for('auth.logout') }}" class="menu-item logout">
